# uniset-configurator

./: .gitignore  AUTHORS  LinkEditor.py  LinkEditor.ui  Makefile.am  README  TODO  UniXML.py  apspanel.glade  apspanel.py  autogen.sh  base_editor.py  base_main.py  can.glade  can_editor.py  can_main.py  cards  cmd_param.py  configure.ac  configure.py  configure.xml  cpanel.src.xml  dlg_nodes.py  dlg_slist.py  dlg_xlist.py  editor.ui  geu.cpanel.src.xml  geu.src.xml  geu_editor.ui  geu_panel.ui  geucontrol.src.xml  global_conf.py  io_conf.py  io_editor.py  io_main.py  io_maintree.py  iocards.py  lcaps-template.xml  lcaps-test-skel-item.xml  lcaps.glade  (+24 more)
.gear/: rules
images/: Makefile.am
modules/: Makefile.am  priority.list  ses_panel.ui
modules/apspanel/: Makefile.am  apspanel.glade  apspanel.py  apspanel_conf.py
modules/apspanel/templates/: Makefile.am  apspanel-template-noconfirm.xml  apspanel-template-nohorn.xml  apspanel-template.xml  apspanel-test-skel-check.xml  apspanel-test-skel-item.xml  apspanel-test-skel.xml
modules/can/: Makefile.am  can.glade  can.py  can_conf.py
modules/can/templates/: Makefile.am  ctl-can-config-skel.sh
modules/geu/: Makefile.am  geu.cpanel.src.xml  geu.py  geu.src.xml  geu_editor.ui  geu_panel.py  geu_panel.ui  geucontrol.src.xml  geupanel.py
modules/lcaps/: Makefile.am  lcaps.glade  lcaps.py  lcaps_conf.py
modules/lcaps/templates/: Makefile.am  lcaps-template-noconfirm.xml  lcaps-template-nohorn.xml  lcaps-template.xml  lcaps-test-skel-check.xml  lcaps-test-skel-item.xml  lcaps-test-skel.xml
modules/nodes/: Makefile.am  nodes.glade  nodes.py
modules/ses/: Makefile.am  cpanel.src.xml  sees.src.xml  seescontrol.src.xml  ses.py  ses_panel.py  ses_panel.ui  ses_process.py  ses_process.ui  seseditor.ui
modules/unet/: Makefile.am  unet.py  unet.ui
modules/uniset/: Makefile.am  uniset.glade  uniset.py
modules/uniset-comm/: Makefile.am  uniset-comm.glade  uniset-comm.py
modules/uniset-io/: Makefile.am  card_editor.py  editor.ui  uniset-io.py  uniset_io.py  uniset_io_conf.py
modules/uniset-io/cards/: card_KM1624.py  card_KM31LVDT.py  card_KM31LVDT.ui  card_KM5901.py  card_KM5902.py  card_None.ui  card_UNIO96.py
modules/uniset-io/templates/: Makefile.am
modules/uniset_io/: Makefile.am  card_editor.py  editor.ui  gen-xsltfile.sh  uniset-io-gentags.sh.in  uniset-io-gentags.xsl  uniset-io-gentags.xsl.tpl  uniset-io.glade  uniset_io.glade  uniset_io.py  uniset_io_conf.py
modules/uniset_io/cards/: Makefile.am  card_AI16_5a_3.py  card_AI16_5a_3.ui  card_AIxx5a.py  card_AIxx5a.ui  card_AO16.py  card_DI32.py  card_DI32.ui  card_DO32.py  card_KM1624.py  card_KM1624.ui  card_KM5856.py  card_None.py  card_None.ui  card_PCI1750.py  card_UNIO96.py  card_UNIO96.ui  card_unio96.py  simple_card.py
modules/uniset_io/templates/: ctl-comedi-skel.sh
modules/viewer/: Makefile.am  viewer.glade  viewer.py
templates/: Makefile.am  lcaps-test-skel-check.xml  lcaps-test-skel-item.xml  lcaps-test-skel.xml
